[build-system]
requires = ['setuptools>=40.8.0', 'cffi>=1.15.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'secp256k1'
version = '0.14.0'
description = 'FFI bindings to libsecp256k1'
readme = 'README.md'
authors = [
  {name = 'Ludvig Broberg', email = 'lud@tutanota.com'}
]
maintainers = [
  {name = 'Rusty Russell', email = 'rusty@rustcorp.com.au'}
]
license = { text = "MIT" }
classifiers = [
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 2',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
  'Topic :: Software Development :: Libraries',
  'Topic :: Security :: Cryptography',
]
requires-python = ">= 3.7"

[project.urls]
Repository = 'https://github.com/rustyrussell/secp256k1-py'

[project.optional-dependencies]
testing = ['pytest==2.8.7']

[tool.setuptools.packages.find]
exclude = ['_cffi_build', '_cffi_build.*', 'libsecp256k1']
